# judge0-rs

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yaml
src/: client.rs  config.rs  error.rs  lib.rs  model.rs
