[package]
name = "judge0-rs"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
mockito = "1.0.2"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
